--- a/style/style.css
+++ b/style/style.css
@@ -35,3 +35,32 @@ body {
   font-weight: 400;
   line-height: 1;
 }
+
+.wrapper {
+  --width: 71.25rem;
+  max-width: var(--width);
+  margin: 0 auto;
+  padding: var(--fs-400);
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--fs-400) 0;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.link--started:link,
+.link--started:visited {
+  padding: var(--fs-400) var(--fs-600);
+  background-color: var(--color-primary-400);
+  border-radius: 10rem;
+  color: var(--color-neutral-400);
+  font-weight: 500;
+}
